# openweathercli

./: .gitignore  Cargo.toml  README.md  config.yaml  flake.nix  result  setup.sh
src/: main.rs
src.bk/: lib.rs  main.rs
src.bk/data/: convert.rs  current_weather.rs  data.rs  geocoding.rs  mod.rs
src.bk/options/: mod.rs  options.rs
src/data/: convert.rs  current_weather.rs  data.rs  five_day_forecast.rs  geocoding.rs  geocoding.rs.bk  mod.rs
src/options/: args.rs  config.rs  environment.rs  mod.rs  options.rs
