[package]
name = "openweathercli"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
dotenv = "0.15.0"
itertools = "0.12.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.34"
tokio = { version = "1.35.1", features = ["full"] }
